# pkr

./: .gitignore  CMakeLists.txt  README.md  blotto.h  rps.h  solver.cpp
papers/: papers.txt
scripts/: blotto_comb.py  kuhn.py
src/: CMakeLists.txt  blotto.h  dudo.h  kuhn.h  rps.h  solver.cpp
